Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54019

regression in certain MouseArea hover use cases

XMLWordPrintable

    • f7e462ba153ff33a02cad903efc8662f1eacd225, cd7c5f94a (dev), 4271d4586 (6.6), 66610bcb5 (tqtc/lts-6.5)

      After f728a514abdf59e2ac556eef027a69d9f21db4b2 ( https://codereview.qt-project.org/#/c/127723/ ) here is a use case which doesn't work anymore:

      import QtQuick 2.7
      
      Item {
          width: 200
          height: 200
          MouseArea {
              id: ma
              property string str: "foo!"
              width: 150; height: 150
              hoverEnabled: true
      
              Rectangle {
                  anchors.fill: parent
                  color: ma.containsMouse ? "lightsteelblue" : "gray"
              }
              Text {
                  text: ma.str // not OK
      //            text: "foo!" // OK
              }
          }
      }
      

        1. qtbug54019.qml
          0.4 kB
          Shawn Rutledge
        For Gerrit Dashboard: QTBUG-54019
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: